WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221984
ownPropertyKeys should call JSArray::tryCreate instead of JSArray::create
https://bugs.webkit.org/show_bug.cgi?id=221984
Summary
ownPropertyKeys should call JSArray::tryCreate instead of JSArray::create
Saam Barati
Reported
2021-02-16 11:52:32 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-02-23 11:53:13 PST
<
rdar://problem/74653676
>
Yusuke Suzuki
Comment 2
2025-01-13 15:17:56 PST
<
rdar://problem/142474442
>
Yusuke Suzuki
Comment 3
2025-01-13 15:18:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38965
EWS
Comment 4
2025-01-14 04:32:27 PST
Committed
288835@main
(b60c3001b354): <
https://commits.webkit.org/288835@main
> Reviewed commits have been landed. Closing PR #38965 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug