[JSC] ownPropertyKeys should call JSArray::tryCreate instead of JSArray::create https://bugs.webkit.org/show_bug.cgi?id=221984 rdar://142474442

Reviewed by Yijia Huang.

Make ownPropertyKeys robust against OOM.

* JSTests/stress/own-property-names-oom.js: Added.
(try.func_1_):
* Source/JavaScriptCore/runtime/JSArray.h:
(JSC::JSArray::create):
* Source/JavaScriptCore/runtime/JSImmutableButterfly.h:
(JSC::JSImmutableButterfly::tryCreate):
(JSC::JSImmutableButterfly::create):
* Source/JavaScriptCore/runtime/ObjectConstructor.cpp:
(JSC::ownPropertyKeys):

Canonical link: https://commits.webkit.org/288835@main